--- a/mobile-app-2/Plot_Sensor.html
+++ b/mobile-app-2/Plot_Sensor.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0014)about:internet -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 	
 	<style>
 	canvas{
