--- a/mobile-app-2/Alert.html
+++ b/mobile-app-2/Alert.html
@@ -29,7 +29,7 @@ function handleOrientation(event) {
   var y = event.gamma; // In degree in the range [-90,90]
 var z = event.alpha;
   output.innerHTML += "alpha: " + z + "\n";
-  output.innerHTML  = "beta : " + x + "\n";
+  output.innerHTML += "beta : " + x + "\n";
   output.innerHTML += "gamma: " + y + "\n";
 
   // Because we don't want to have the device upside down
