--- a/mobile-app-2/Alert.html
+++ b/mobile-app-2/Alert.html
@@ -24,10 +24,10 @@ var output = document.querySelector('.output');
 
 
 
-function handleOrientation(event) {
+/*function handleOrientation(event) {
   var x = event.beta;  // In degree in the range [-180,180]
   var y = event.gamma; // In degree in the range [-90,90]
-var z = event.alpha;
+  var z = event.alpha;
   output.innerHTML += "alpha: " + z + "\n";
   output.innerHTML += "beta : " + x + "\n";
   output.innerHTML += "gamma: " + y + "\n";
@@ -45,9 +45,12 @@ var z = event.alpha;
   // 10 is half the size of the ball
   // It center the positioning point to the center of the ball
   
-}
+}*/
 
-window.addEventListener('deviceorientation', handleOrientation);
+//window.addEventListener('deviceorientation', handleOrientation);
+window.addEventListener('devicemotion', function(event) {
+  console.log(event.acceleration.x + ' m/s2');
+});
 
             </script>
         
