--- a/mobile-app-2/Alert_Movement.html
+++ b/mobile-app-2/Alert_Movement.html
@@ -48,7 +48,7 @@ var output = document.querySelector('.output');
 //window.addEventListener('deviceorientation', handleOrientation);
 window.addEventListener('devicemotion', function(event) {
   //console.log(event.acceleration.x + ' m/s2');
-  output.innerHTML="Acc: "+event.acceleration.x;
+  output.innerHTML="Acc: "+event.acceleration.x..toFixed(4);;
 });
 
 
