--- a/mobile-app-2/Alert_Movement.html
+++ b/mobile-app-2/Alert_Movement.html
@@ -48,7 +48,10 @@ var output = document.querySelector('.output');
 //window.addEventListener('deviceorientation', handleOrientation);
 window.addEventListener('devicemotion', function(event) {
   //console.log(event.acceleration.x + ' m/s2');
-  output.innerHTML="Acc X: "+event.acceleration.x.toFixed(4);;
+  x=event.acceleration.x.toFixed(4);
+  y=event.acceleration.y.toFixed(4);
+  z=event.acceleration.z.toFixed(4);
+  output.innerHTML="<br>"+event.acceleration.x.toFixed(4);
 });
 
 
