--- a/mobile-app-2/Alert_Movement.html
+++ b/mobile-app-2/Alert_Movement.html
@@ -51,7 +51,7 @@ window.addEventListener('devicemotion', function(event) {
   x=event.acceleration.x.toFixed(4);
   y=event.acceleration.y.toFixed(4);
   z=event.acceleration.z.toFixed(4);
-  output.innerHTML="<br>"+event.acceleration.x.toFixed(4);
+  output.innerHTML+="<br>"+event.acceleration.x.toFixed(4);
 });
 
 
