--- a/mobile-app-2/Alert_Movement.html
+++ b/mobile-app-2/Alert_Movement.html
@@ -48,9 +48,9 @@ var output = document.querySelector('.output');
 //window.addEventListener('deviceorientation', handleOrientation);
 window.addEventListener('devicemotion', function(event) {
   //console.log(event.acceleration.x + ' m/s2');
-  x=event.acceleration.x.toFixed(4);
-  y=event.acceleration.y.toFixed(4);
-  z=event.acceleration.z.toFixed(4);
+  x=abs(event.acceleration.x.toFixed(4));
+  y=abs(event.acceleration.y.toFixed(4));
+  z=abs(event.acceleration.z.toFixed(4));
   max=x>y?x>z?x:z:y>z?y:z;
   output.innerHTML+="<br>"+x+"  "+y+"   "+z+"   "+max;
 });
