--- a/mobile-app-2/Alert.html
+++ b/mobile-app-2/Alert.html
@@ -53,7 +53,7 @@ window.addEventListener('devicemotion', function(event) {
   z=Math.abs(event.acceleration.z.toFixed(4));
   max=x>y?x>z?x:z:y>z?y:z;
   
-  if(max>2 && i==0){
+  if(max>2 && i==0 && max<col/12){
 	i=100;
   }else{
 	col=12*max;
