--- a/mobile-app-2/Alert.html
+++ b/mobile-app-2/Alert.html
@@ -55,6 +55,7 @@ window.addEventListener('devicemotion', function(event) {
   
   if(max>2 && i==0 && max<col/12){
 	i=100;
+	col=255;
   }else{
 	col=12*max;
 	}
